--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frontend",
   "version": "0.1.0",
-  "homepage":"https://github.com/Ermeson2018/frontend",
+  "homepage":"https://Ermeson2018.github.io/frontend",
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
